--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
+<head>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta charset="utf-8" />
+  <title> Emily Rose </title>
+ 
+  <link href="css/semantic.css" rel="stylesheet" type="text/css" />
+ 
+  <style type="text/css">
+  </style>
+
+</head>
 <body>
-<hi>Hello World</hi>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 class="ui header" align="middle"> Emily Rose </h1>
+<div class="peek">
+	<div class="rounded ui medium image">
+	  <img src="/images/prof.jpg">
+	</div>
+    <div class="ui vertical pointing secondary menu">
+      <a class="active item" href="/index">Home</a>
+      <a class="item" href="/portfolio">Portfolio</a>
+      <a class="item">Job History</a>
+      <a class="item">More About Me</a>
+    </div>
+  </div>
+
+
+</body>
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="javascript/semantic.js" type="text/javascript"></script>
+ 
+  <script type="text/javascript">
+ 
+  </script>      
 </body>
 </html>
