--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     </div>
   </div>
 
-
+<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<footer align="middle"> <small>&copy Emily Rose 2014</small></footer>
 </body>
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="javascript/semantic.js" type="text/javascript"></script>
