--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1 class="ui header" align="middle"> Emily Rose </h1>
 <div class="peek">
     <div class="ui vertical pointing secondary menu">
-	<div class="rounded ui medium image">
+	<div class="rounded ui small image">
 	  <img src="/images/prof.jpg">
 	</div>
       <a class="active item" href="/index">Home</a>
