--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <h1 class="ui header" align="middle"> Emily Rose </h1>
 <div class="peek">
     <div class="ui vertical pointing secondary menu">
-	<div class="rounded ui small image">
+	<div class="rounded ui medium image">
 	  <img src="/images/prof.jpg">
 	</div>
-      <a class="active item" href="/index">Home</a>
+      <a class="active item" href="/index"><i class="circular teal home icon"></i>Home</a>
       <a class="item" href="/portfolio">Portfolio</a>
       <a class="item">Job History</a>
       <a class="item">More About Me</a>
