--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="rounded ui medium image">
 	  <img src="/images/prof.jpg">
 	</div>
-      <a class="active item" href="/index"><i class="circular teal home icon">Home</i></a>
+      <a class="active item" href="/index">Home</a>
       <a class="item" href="/portfolio">Portfolio</a>
       <a class="item">Job History</a>
       <a class="item">More About Me</a>
