--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	</div>
       <a class="active item" href="/index">Home</a>
       <a class="item" href="/portfolio">Portfolio</a>
-      <a class="item">Job History</a>
-      <a class="item">More About Me</a>
+      <!-- <a class="item">Job History</a>
+      <a class="item">More About Me</a> -->
     </div>
   </div>
 
