--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	  <img src="/images/prof.jpg">
 	</div>
       <a class="active item" href="/index">Home</a>
+      <a class="item" href="/bio">My Bio</a>
       <a class="item" href="/portfolio">Portfolio</a>
       <!-- <a class="item">Job History</a>
       <a class="item">More About Me</a> -->
