--- a/index.html
+++ b/index.html
@@ -14,19 +14,29 @@
 </head>
 <body>
 <h1 class="ui header" align="middle"> Emily Rose </h1>
-<div class="peek">
-    <div class="ui vertical pointing secondary menu">
-	<div class="rounded ui medium image">
-	  <img src="/images/prof.jpg">
-	</div>
-      <a class="active item" href="/index">Home</a>
-      <a class="item" href="/bio">My Bio</a>
-      <a class="item" href="/portfolio">Portfolio</a>
-      <!-- <a class="item">Job History</a>
-      <a class="item">More About Me</a> -->
-    </div>
+<div class="main container">
+<div class="ui grid">
+  <div class="three wide column">
+      <div class="peek">
+	    <div class="ui vertical pointing secondary menu">
+		<div class="rounded ui medium image">
+		  <img src="/images/prof.jpg">
+		</div>
+	      <a class="active item" href="/index">Home</a>
+	      <a class="item" href="/bio">My Bio</a>
+	      <a class="item" href="/portfolio">Portfolio</a>
+	      <!-- <a class="item">Job History</a>
+	      <a class="item">More About Me</a> !-->
+	    </div>
+	  </div> 
   </div>
-
+  <div class="thirteen wide column">
+    <!-- begin page content -->
+    <!-- end page content -->
+  </div>
+	
+<!-- footer -->
+</div>
 <br>
 	<br>
 	<br>
