--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
 		<div class="rounded ui medium image">
 		  <img src="/images/prof.jpg">
 		</div>
-	      <a class="active item" href="/index">Home</a>
+	      <a class="item" href="/index">Home</a>
 	      <a class="item" href="/bio">My Bio</a>
-	      <a class="item" href="/portfolio">Portfolio</a>
+	      <a class="active item" href="/portfolio">Portfolio</a>
 	      <!-- <a class="item">Job History</a>
 	      <a class="item">More About Me</a> !-->
 	    </div>
