--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,9 @@
   </div>
   <div class="thirteen wide column">
     <!-- begin page content -->
+    <h2 class="ui dividing header">My Portfolio</h2>
+    <h4 class="ui inverted blue header">1. The Unofficial Wheaton Equestrian Website</h4>
+    <p>/t I have created and maintained a website for the Wheaton College Equestrian Team at wheatequi.me</p>
     <!-- end page content -->
   </div>
 	
