--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     <!-- begin page content -->
     <h2 class="ui dividing header">My Portfolio</h2>
     <h4 class="ui inverted blue header">1. The Unofficial Wheaton Equestrian Website</h4>
-    <p>I have created and maintained a <a href="wheatequi.me" target="_blank">website</a> for the Wheaton College Equestrian Team with the current team roster, competition schedule, competition results, news about the team, and season photos.</p>
+    <p>I have created and maintained a <a href="http://wheatequi.me">website</a> for the Wheaton College Equestrian Team with the current team roster, competition schedule, competition results, news about the team, and season photos.</p>
     <!-- end page content -->
   </div>
 	
