--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,9 @@
     <h2 class="ui dividing header">My Portfolio</h2>
     <h4 class="ui inverted blue header">1. The Unofficial Wheaton Equestrian Website</h4>
     <p>I have created and maintained a <a href="http://wheatequi.me">website</a> for the Wheaton College Equestrian Team with the current team roster, competition schedule, competition results, news about the team, and season photos.</p>
+    
+    <h4 class="ui inverted blue header">2. Searching for Technology on Campus</h4>
+    <p>I have been working on an ongoing project to create a page on the Wheaton College website that enables visiters to <a href="http://wheatoncollege.edu/technology/locate-borrow/find-software-on-campus/">find software on campus.</a> Visiters are able to search by location, type of software, OS type, or by software name. </p>
     <!-- end page content -->
   </div>
 	
