--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
   </div>
   <div class="thirteen wide column">
     <!-- begin page content -->
-    
-		<div class="rounded ui large image">
-		  <img src="/images/home_hammock.jpg">
-		</div>
-		<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.</p>
+    	<div class="ui two column grid">
+    		<div class="column">
+					<div class="rounded ui large image">
+					  <img src="/images/home_hammock.jpg">
+					</div>
+    		</div>
+    		<div class="column">
+    				<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.</p>
+    		</div>
+    	</div>
     
     <!-- end page content -->
   </div>
