--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link href="css/semantic.css" rel="stylesheet" type="text/css" />
  
   <style type="text/css">
+  span{
+  	vertical-align: middle;
+  	text-align: center;
+  }
   </style>
 
 </head>
@@ -34,12 +38,16 @@
     <!-- begin page content -->
     	<div class="ui two column grid">
     		<div class="column" align=center>
-					<div class="rounded ui large image">
-					  <img src="/images/home_hammock.jpg">
-					</div>
+    			<span>
+				<div class="rounded ui large image">
+				  <img src="/images/home_hammock.jpg">
+				</div>
+			</span>
     		</div>
-    		<div class="column" align=center>
+    		<div class="column" align=center> 
+    			<span>
     				<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.</p>
+    			</span>
     		</div>
     	</div>
     
