--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="thirteen wide column">
     <!-- begin page content -->
-    	<div class="ui two column grid">
+    	<div class="ui relaxed two column grid">
     		<div class="column">
 					<div class="rounded ui large image">
 					  <img src="/images/home_hammock.jpg">
