--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- begin page content -->
     	<div class="ui relaxed two column grid">
     		<div class="column">
-					<div class="rounded ui large image">
+					<div class="rounded ui medium image">
 					  <img src="/images/home_hammock.jpg">
 					</div>
     		</div>
