--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="css/semantic.css" rel="stylesheet" type="text/css" />
  
   <style type="text/css">
+  div.centered{
+    min-height: 1em;
+    display: table-cell;
+    vertical-align: middle;
+  }
   </style>
 
 </head>
@@ -34,13 +39,15 @@
     <!-- begin page content -->
     	<div class="ui relaxed two column grid">
     		<div class="column">
-					<div class="rounded ui medium image">
-					  <img src="/images/home_hammock.jpg">
-					</div>
+    			<div class="centered">
+				<div class="rounded ui medium image">
+				  <img src="/images/home_hammock.jpg">
+				</div>
+			</div>
     		</div>
-    		<div class="column"> 
+    		<div class="column"> <div class="centered">
     				<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.</p>
-    		</div>
+    		</div></div>
     	</div>
     
     <!-- end page content -->
