--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="thirteen wide column">
     <!-- begin page content -->
-    	<div class="ui relaxed two column grid" align="center" valign="center">
+    	<div class="ui relaxed two column grid">
     		<div class="column">
 				<div class="rounded ui medium image">
 				  <img src="/images/home_hammock.jpg">
