--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   <div class="three wide column">
       <div class="peek">
 	    <div class="ui vertical pointing secondary menu">
-		<div class="rounded ui medium image">
-		  <img src="/images/prof.jpg">
-		</div>
+		  <img class="rounded ui medium image" src="/images/prof.jpg">
 	      <a class="active item" href="/index">Home</a>
 	      <a class="item" href="/bio">My Bio</a>
 	      <a class="item" href="/portfolio">Portfolio</a>
