--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="css/semantic.css" rel="stylesheet" type="text/css" />
  
   <style type="text/css">
-
   </style>
 
 </head>
@@ -18,16 +17,23 @@
 <div class="main container">
 <div class="ui grid">
   <div class="three wide column">
+      <div class="peek">
 	    <div class="ui vertical pointing secondary menu">
-		  <img class="rounded ui medium image" src="/images/prof.jpg">
+		<div class="rounded ui medium image">
+		  <img src="/images/prof.jpg">
+		</div>
 	      <a class="active item" href="/index">Home</a>
 	      <a class="item" href="/bio">My Bio</a>
 	      <a class="item" href="/portfolio">Portfolio</a>
+	      <!-- <a class="item">Job History</a>
+	      <a class="item">More About Me</a> !-->
 	    </div>
+	  </div> 
   </div>
   <div class="thirteen wide column">
     <!-- begin page content -->
-    	<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.  I haven't looked back since.</p>
+    	<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.</p>
+    
     <!-- end page content -->
   </div>
 	
