--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <p>I have been working on an ongoing project to create a page on the Wheaton College website that enables visiters to <a href="http://wheatoncollege.edu/technology/locate-borrow/find-software-on-campus/">find software on campus.</a> Visiters are able to search by location, type of software, OS type, or by software name. </p>
    
    <h4 class="ui inverted blue header">3. Cupcakes Cupcakes Cupcakes!</h4>
-   <a href="http://s29.postimg.org/4qiwf5sdj/screenshot_1.jpg"></a><img class="ui small right floated image" src="./images/screenshot_1.jpg"></a>
+   <a href="http://s29.postimg.org/4qiwf5sdj/screenshot_1.jpg"><img class="ui small right floated image" src="./images/screenshot_1.jpg"></a>
     <p>Working with a team of two other classmates, I have created a <a href="www.twocupcakesbakery.com">website</a> for a teammate's wife's baking company. We used a combination of html, css, and svg and used two frameworks: Bootstrap and Semantic UI. Bootstrap was used for the structuring each page and for building the nav bar, where Semantic UI was implemented for sleek appearences of photos and the form on the 'contact us' page. A 'reveal' animation was implemented to the pictures so when a visitor hovered over one of the images, a description of the item popped up.  To the right is a screenshot of the photos page as I designed it, including the revealing of one of the photo's descriptions. Click the image for full size. </p> <small> I cannot speak to the appearence of the website from here on out, because it has been handed over to the company to continue use.</small>
     
    
