--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
    <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/coldwellop1.jkol70oj/attribution,zoompan,geocoder.html?access_token=pk.eyJ1IjoiY29sZHdlbGxvcDEiLCJhIjoiX1VNQ3NRayJ9.cQBNieDMbrdGmgCh2ZFJsg'></iframe>
    
    <h4 class="ui inverted blue header">5. Visual Interpretation of Course Schedule</h4>
-   <p>Taking data presented by Wheaton College's Course Schedule listings, I have created a visual interpretation of it that represents the number of classes offered by each of the following departments: Mathematics, Chemistry, Computer Science, and Music.</p>
+   <p>Taking data presented by Wheaton College's Course Schedule listings, I have created a visual interpretation of it, in the form of a Scalable Vector Graphic, that represents the number of classes offered by each of the following departments: Mathematics, Chemistry, Computer Science, and Music.</p>
    <div>
    	<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 18.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
