--- a/portfolio.html
+++ b/portfolio.html
@@ -579,7 +579,8 @@
    <p>I have created a <a href="https://github.com/coldwellop1/comp398/blob/master/hw14/populate.js">populate.js</a> file that interacts with one of my collections on MongoDB in order to populate the database.  This sample populates the database with 2500 documents containing data of musical scales.</p>
    <h4 class="ui inverted blue header">7. DIY Racket Language</h4>
    <p>Using plai-typed Racket, I have learned to create my own <a href="./myRacket.rkt"  target="_blank">language</a>, including an intepretor, parser, type definitions, and some functions.</p>
-   <h4 class="ui inverted blue header">8. </h4>
+   <h4 class="ui inverted blue header">8. Make Any Change</h4>
+   <p>I have written a <a href="./makeChange.cpp" target="_blank">C++ program</a> that, given any amount of money, can provide the user with the minimal number of coins needed to provide said change, along with how many coins of which denominations are required to do so.  The program is also adjustable so that the coin denominations can be altered.</p>
    <h4 class="ui inverted blue header">9. </h4>
    <h4 class="ui inverted blue header">10. </h4>
     <!-- end page content -->
