--- a/portfolio.html
+++ b/portfolio.html
@@ -583,7 +583,8 @@
    <p>I have written a <a href="./makeChange.cpp" target="_blank">C++ program</a> that, given any amount of money, can provide the user with the minimal number of coins needed to provide said change, along with how many coins of which denominations are required to do so.  The program is also adjustable so that the coin denominations can be altered.</p>
    <h4 class="ui inverted blue header">9. Populate the Archives</h4>
    <p>This year I began working in the Wheaton College Archives, where I have been responsible for populating the archival database with information on the objects and documents we store.  This summer, I was responsible for adding the belongings of our former President Crutcher and his wife to the <a href="http://archives.wheatoncollege.edu:8081/" target="_blank">database</a>. Although I am not able to reveal the back end of this database, by browsing the manuscript collections and other entries, you can clearly see the attention to detail and extensive research that must go into creating an entry. <a href="http://archives.wheatoncollege.edu:8081/repositories/2/resources/4" target="_blank">This entry</a> serves as a quite accurate example of the necessary work that is involved.</p>
-   <h4 class="ui inverted blue header">10. </h4>
+   <h4 class="ui inverted blue header">10. Working with Coding Bipartite Graphs</h4>
+   <p>For the first project in my computer science senior seminar, I wrote a <a href="https://github.com/coldwellop1/comp401/tree/master/proj01">driver program and a class</a> to work with graphs (specifically bipartite graphs).  The program allows the user to import a graph from a file or create their own graph, and then add, remove, and check for edges in that graph, along with checking whether or not the graph is bipartite.</p>
     <!-- end page content -->
   </div>
 	
