--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <div class="thirteen wide column">
     <!-- begin page content -->
-    	<p>I am from a small town called Harpswell, a peninsula on the coast of Maine.  After spending my entire life in Harpswell, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science.</p>
+    	<p>I am from a small town on the coast of Maine.  After spending my entire life in there, I began attending Wheaton College in Norton, MA in the fall of 2011.  When I arrived at Wheaton, I knew I wanted to study music, but that I wanted to find a major that I was passionate about and would enjoy making a career out of.  After my freshman year, I discovered computer science and declared a combined major of mathematics and computer science so I could advance my analytical and problem solving skills while gaining a passion for and knowledge of programming.</p>
     
     <!-- end page content -->
   </div>
